--- a/LCARS/App.axaml
+++ b/LCARS/App.axaml
@@ -7,6 +7,7 @@
     </Application.DataTemplates>-->
 
     <Application.Styles>
+		<StyleInclude Source="avares://LCARS.Components/TitleBar.axaml"/>
         <FluentTheme Mode="Light"/>
     </Application.Styles>
 </Application>
