--- a/LCARS/Views/MainWindow.axaml
+++ b/LCARS/Views/MainWindow.axaml
@@ -3,17 +3,19 @@
         xmlns:vm="using:LCARS.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:lcars="clr-namespace:LCARS.Components;assembly=LCARS.Components"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="LCARS.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="LCARS">
-
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<Grid>
+        <!--<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>-->
+		<lcars:TitleBar></lcars:TitleBar>
+	</Grid>
 
 </Window>
