--- a/LCARS/App.axaml
+++ b/LCARS/App.axaml
@@ -2,12 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:LCARS"
              x:Class="LCARS.App">
-    <!--<Application.DataTemplates>
-        <local:ViewLocator/>
-    </Application.DataTemplates>-->
-
     <Application.Styles>
-		<StyleInclude Source="avares://LCARS.Components/TitleBar.axaml"/>
-        <FluentTheme Mode="Light"/>
+		<StyleInclude Source="avares://LCARS.Components/Controls.axaml"/>
+        <FluentTheme Mode="Dark"/>
     </Application.Styles>
 </Application>
